css/home.css
/* ... */
/* overriding global styles*/
.events-and-programs h3,
.events-and-programs p {
	color: var(--color-onyx);
}
.events-and-programs h4 {
	margin-bottom: 0;
	color: var(--color-onyx);
}

/* targeting the images in the section */
.events-and-programs img {
	margin: 0 auto;
}

/* targeting the text div in the section */
.event-description {
	margin: var(--spacing20);
}

.events-and-programs .image-link:hover {
	color: var(--color-white);
}

/* 
===================================
Media Queries (overriding styles for different screen sizes)

Note: Here we are using a mobile-first approach, so we start with the smallest screen size and work our way up.
Start by writing styles for the mobile version of the design on the lines above.
Anything that needs to change for larger screens should be added to the media queries below.

Feel free to change the min/max-width values to whatever you need. Use variables.
===================================
*/

/* Mobile and Larger */
@media screen and (max-width: 768px) {
	/* Add styles that apply to tablet and desktop */
}

/* Tablet Only */
@media screen and (min-width: 768px) and (max-width: 1024px) {
	/* Add styles that only apply to tablet. These are usually fixes to get responsiveness right */

	/* ================================
Hero Section
===================================  */
	/* hides the default image for the section */
	.hero img {
		display: none;
	}

	/* the entire section */
	.hero {
		background: linear-gradient(
				352deg,
				rgba(9, 9, 9, 0.8) 32.03%,
				rgba(9, 9, 9, 0) 73.42%
			),
			url(../assets/images/pages/home/hero-image-home.jpg);

		background-size: cover;
		position: relative;
		height: 100vh;
		background-position: center;
	}

	/* contains heading, paragraph, and buttons for the hero image */
	.hero-home {
		position: absolute;
		z-index: 10;
		bottom: 10%;
		max-width: var(--wrapper-width-max);
		left: 50%;
		transform: translate(-50%, 0%);
	}

	/* targeting the div holding the buttons */
	.hero .btn-container {
		display: flex;
		justify-content: space-around;
	}

	/* targeting the buttons that need to be hidden on desktop version */
	.hero .button3 {
		display: none;
	}

	/* overriding global styles */
	.hero-home h3,
	.hero-home p {
		color: var(--color-white);
	}

	/* ================================
Community Partnerships Section
===================================  */
	/*targeting the div holding text and button  */
	.partnerships-paragraph {
		width: 80%;
		margin: 0 auto;
	}

	/* overriding global styles */
	.community-partnerships p {
		color: var(--color-white);
	}

	/* ================================
Global Ecosystems Section
===================================  */

	/* the background for the entire section */
	.global-ecosystem {
		padding-top: var(--spacing100);
		padding-bottom: var(--spacing100);
		background: url(../assets/images/pages/home/bg-overlay-vector-01.svg),
			var(--color-bluepurple);
		background-size: cover;
	}

	/* targeting the header styling  */
	.global-ecosystem h4 {
		margin-bottom: 0;
		font-size: var(--font36);
		line-height: var(--line-height40);
		color: var(--color-white);
	}
	/* contains 2 divs - ecosystem subsection (cybergrape) and the blockquote */
	.ecosystem {
		width: 100%;
		margin: 0 auto;
		text-align: left;
		display: flex;
		flex-direction: row;
		align-items: center;
		justify-content: center;
	}
	/* targeting the style for the cybergrape div */
	.ecosystem-subsection {
		margin: 0;
		border-radius: 10px;
		padding-bottom: var(--spacing40);
		padding-left: 52px;
		padding-right: var(--spacing100);
		width: 70%;
		position: relative;
		left: 30px;
	}
	/* targeting the color of the font in the div */
	.ecosystem-subsection p {
		color: var(--color-white);
	}

	/* stylings for the onyx block quote */
	.blockquote {
		position: relative;
		right: 30px;
		width: 60%;
		margin: 0;
		padding-top: var(--spacing20);
		padding-bottom: var(--spacing20);
		padding-left: 64px;
		padding-right: 46px;
	}

	/* targeting positioning for the svgs in the blockquote */
	.blockquote p::before {
		top: 30px;
		left: 20px;
	}
	.blockquote p::after {
		bottom: 30px;
		right: 20px;
	}

	/* targeting the text in the blockquote */
	.blockquote p {
		font-size: var(--font24);
		font-weight: var(--font-weight-medium);
		line-height: var(--line-height28);
		color: var(--color-white);
		font-style: italic;
	}

	/* ================================
What We Do Section
===================================  */

	/* entire section */
	.what-we-do {
		width: 80%;
		padding-bottom: var(--spacing40);
	}
	/* overriding global styles */
	.what-we-do h3 {
		color: var(--color-onyx);
	}

	.what-we-do p {
		color: var(--color-white);
	}
	/* ================================
Our Values Section
===================================  */
	/*targeting the div holding the blue rectangle  */
	.our-values {
		width: 80%;
	}
	/* overriding global styles */
	.values p {
		color: var(--color-white);
	}

	/* ================================
Events and Programs Section
===================================  */
	/*overriding global styles  */
	.events-and-programs h3,
	.events-and-programs p {
		color: var(--color-onyx);
	}
	.events-and-programs h4 {
		color: var(--color-onyx);
		margin-bottom: 0;
	}

	/* if we want column style instead of row */

	/* .events-container {
		width: 80%;
		margin: 0 auto;
	}
	.placeholder {
		width: 60%;
		margin: 0 auto;
	}
	.event-description {
		width: 60%;
		text-align: left;
	} */
	/* targeting the div holding placeholder */
	.events-container {
		width: 100%;
		display: flex;
		flex-direction: row;
		justify-content: center;
		align-content: center;
	}

	/* targeting div that is holding the image and text for "placeholder" */
	.placeholder {
		width: 30%;
		gap: var(--spacing10);
	}
}
/* ... */

